name:                spevery
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/swizzard/spevery#readme
license:             BSD3
license-file:        LICENSE
author:              sam raker
maintainer:          sam.raker@gmail.com
copyright:           2017 sam raker
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Spevery.Censorer
                     , Spevery.Lib
                     , Spevery.Logger
                     , Spevery.Output
                     , Spevery.Scrape
                     , Spevery.Spoon
                     , Spevery.SQLite
                     , Spevery.Twitter
                     , Spevery.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , fast-logger
                     , http-client
                     , lens
                     , lens-aeson
                     , mtl
                     , sqlite-simple
                     , text
                     , twitter-conduit
                     , wreq
  default-language:    Haskell2010

executable spevery-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , spevery
  default-language:    Haskell2010

test-suite spevery-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spevery
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/swizzard/spevery
